@@ -33,6 +33,18 @@ Q. Is MD5 broken?
 
 <h2 id="general"> General Questions </h2>
 
+<h3 id="license">
+Q. How can md5deep be public domain when it uses GPL'ed code? Shouldn't 
+it be GPL'ed?
+</h3>
+
+<p>
+A.
+
+</p>
+
+
+
 <h3 id="shell">
 Q. Why can't I just use one line of shell to do what md5deep does?
 </h3>
@@ -142,6 +154,17 @@ You can now run md5deep using this command window as described
 in the <a href="getting-started.html">Getting Started guide</a>.
 
 </p>
+
+<h3 id="recursive">
+Why doesn't the -r flag let me hash every file with the same extension (e.g. md5
+deep -r *.txt)?
+</h3>
+
+<p>
+A.
+
+</p>
+
 
 
 
